--- a/style.css
+++ b/style.css
@@ -77,6 +77,14 @@ main {
   border-radius: 50%;
 }
 
+.projects-gif {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  margin: auto;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
 .hero-text {
   display: flex;
   flex-direction: column;
@@ -161,22 +169,6 @@ nav a:hover,
   text-decoration: underline;
 }
 
-.button-container {
-  padding: 1rem 1rem 1rem 0;
-  display: block;
-  text-align: left;
-}
-
-.button-container .button {
-  margin: 0;
-}
-
-.footer-container {
-  display: block;
-  padding: 1rem 2rem;
-  text-align: right;
-}
-
 footer {
   margin: 0;
   text-align: center;
@@ -185,6 +177,11 @@ footer {
   padding: 1rem 0.5rem;
   background-color: var(--background-second);
   color: var(--background);
+  width: 100%;
+  bottom: 0;
+  /* position: fixed; */
+  left: 0;
+  /* height: 5%; */
 }
 
 @media (max-width: 660px) {
