--- a/style.css
+++ b/style.css
@@ -80,7 +80,6 @@ main {
 .projects-gif {
   width: 300px;
   height: 300px;
-  border-radius: 50%;
   margin: auto;
   margin-top: 3rem;
   margin-bottom: 3rem;
@@ -182,6 +181,10 @@ footer {
   /* position: fixed; */
   left: 0;
   /* height: 5%; */
+}
+
+footer .credits {
+  text-align: left;
 }
 
 @media (max-width: 660px) {
