--- a/style.css
+++ b/style.css
@@ -77,9 +77,9 @@ main {
   border-radius: 50%;
 }
 
-.projects-gif {
-  width: 300px;
-  height: 300px;
+.illustration {
+  width: 350px;
+  height: 350px;
   margin: auto;
   margin-top: 3rem;
   margin-bottom: 3rem;
